--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 	"reponame":"sample-crosswalk-webgl",
 	"title":"CrossWalk WebGL",
 	"tooltip":"[CrossWalk-Android] A sample that uses 3D WebGL Renderers & touch.",
-	"description":"A sample that uses 3D WebGL Renderers & touch.",
+	"description":"[CrossWalk-Android] A sample that uses 3D WebGL Renderers & touch.",
 	"articleurl":"",
     "screenshotUrl":"",
     "iconUrl":"",
